# faki4sem

./: .clang-format
lesson1/: CMakeLists.txt  main.cpp
lesson1/A/: libA.cpp  libA.hpp
lesson1/B/: CMakeLists.txt  libB.cpp  libB.hpp
lesson1/CopyElisionDemo/: demo_copy_elision.cpp  demo_copy_elision.hpp
lesson1/tests/: CMakeLists.txt  homework.cpp  test.cpp
lesson2/: CMakeLists.txt
lesson2/src/: CRTP.h  buffer.h  common.hpp  memdev.cpp  memdev.hpp  ranked_device.cpp  ranked_device.hpp  sequential_device.cpp  sequential_device.hpp
lesson2/tests/: CMakeLists.txt  any.cpp  common.cpp  crtp.cpp  devmem.cpp  variant.cpp
lesson3/: CMakeLists.txt  main.cpp  pc.cpp  timer.h
